# VmSdkDemo_android

./: buildLib.sh  gradlew.bat  local.properties  settings.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/jxlianlian/vmnetsdktest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: JWDeviceDiscovery-lib.cpp  JWSmartConfig-lib.cpp  VmNet-lib.cpp  VmPlayer-lib.c  VmPlayer-lib.cpp  ZRudt-lib.cpp
app/src/main/cpp/cipher/: aes.c  aes.h  base64encode.c  base64encode.h  jw_aes.c  jw_aes.h  jw_cipher.c  jw_cipher.h  md5.c  md5.h
app/src/main/cpp/devicediscovery/: DeviceDiscoveryManager.cpp  DeviceDiscoveryManager.h  device_discovery.cpp  device_discovery.h
app/src/main/cpp/devicediscovery/packet/: ObcpPacket.h
app/src/main/cpp/divider/: divider_type.h  h264_divider.c  h264_divider.h
app/src/main/cpp/dp/: HB.pb.cc  HB.pb.h
app/src/main/cpp/encdec/: AACEncoder.cpp  AACEncoder.h  Decoder.cpp  Decoder.h  PayloadTypeDef.h  VmPlayer.cpp  VmPlayer.h
app/src/main/cpp/ffmpeg/libavcodec/: avcodec.h  dv_profile.h  videotoolbox.h
app/src/main/cpp/ffmpeg/libavfilter/: avfilter.h  buffersrc.h
app/src/main/cpp/ffmpeg/libavformat/: avc.h  avformat.h  avio.h  ijkavformat.h  internal.h  url.h
app/src/main/cpp/ffmpeg/libavutil/: application.h  attributes.h  avutil.h  buffer.h  camellia.h  channel_layout.h  cpu.h  crc.h  downmix_info.h  fifo.h  frame.h  hwcontext.h  hwcontext_vaapi.h  imgutils.h  intreadwrite.h  log.h  mathematics.h  mem.h  opt.h  pixdesc.h  pixfmt.h  rational.h  samplefmt.h  thread.h  twofish.h
app/src/main/cpp/ffmpeg/libffmpeg/: config.h
app/src/main/cpp/ffmpeg/libswresample/: swresample.h
app/src/main/cpp/ffmpeg/libswscale/: swscale.h
app/src/main/cpp/opensdk/: RtpUdpServer.cpp  RtpUdpServer.h  StreamHeartbeatServer.cpp  StreamHeartbeatServer.h
app/src/main/cpp/p2p/: P2PClientSession.h  P2PKeepAlive.cpp  P2PKeepAlive.h
app/src/main/cpp/payload/: PayloadTypeDef.h
app/src/main/cpp/pb/google/protobuf/: any.h  any.pb.h  api.pb.h  arena.h  arena_test_util.h  arenastring.h  descriptor.h  descriptor.pb.h  descriptor_database.h  duration.pb.h  dynamic_message.h  empty.pb.h  extension_set.h  field_mask.pb.h  generated_enum_reflection.h  generated_enum_util.h  generated_message_reflection.h  generated_message_table_driven.h  generated_message_util.h  has_bits.h  map.h  map_entry.h  map_entry_lite.h  map_field.h  map_field_inl.h  map_field_lite.h  map_lite_test_util.h  map_test_util.h  map_test_util_impl.h  map_type_handler.h  message.h  message_lite.h  metadata.h  metadata_lite.h  package_info.h  reflection.h  reflection_internal.h  reflection_ops.h  repeated_field.h  service.h  (+12 more)
app/src/main/cpp/plateform/: ErrorCode.h  MainModule.cpp  MainModule.h  StreamSessionManager.cpp  StreamSessionManager.h  VmNet.cpp  VmNet.h  VmPlayer.cpp  VmPlayer.h  VmType.h
app/src/main/cpp/render/: EGLRender.cpp  EGLRender.h
app/src/main/cpp/rtp/: RtpPacket.cpp  RtpPacket.h
app/src/main/cpp/rtsp/: RtspTcpClient.cpp  RtspTcpClient.h  authTools.cpp  authTools.h  md5.cpp  md5.h
app/src/main/cpp/smartconfig/: WifiConfig.cpp  WifiConfig.h  smart_config.cpp  smart_config.h
app/src/main/cpp/stream/: StreamClient.cpp  StreamClient.h
app/src/main/cpp/stream/packet/: ActivePacket.h  AudioPacket.h  AuthReqPacket.h  AuthRespPacket.h  PacketStreamType.h  VideoPacket.h
app/src/main/cpp/uas/: AlarmType.h  ControlType.h  UasClient.cpp  UasClient.h
app/src/main/cpp/uas/packet/: AlarmPacket.h  ChannelPacket.h  ControlPacket.h  ControlPlaybackPacket.h  DepTreePacket.h  HeartbeatPacket.h  LoginPacket.h  LogoutPacket.h  PacketMsgType.h  PushAlarmPacket.h  RecordPacket.h  StartMonitorPacket.h  StartPlaybackPacket.h  StartTalkPacket.h  StopMonitorPacket.h  StopPlaybackPacket.h  StopTalkPacket.h
app/src/main/cpp/udt/: AckHistoryWindow.cpp  AckHistoryWindow.h  GlideWindow.h  MedianUtil.h  ReceiveGlideWindow.cpp  ReceiveGlideWindow.h  ReceiveLossList.cpp  ReceiveLossList.h  SendGlideWindow.cpp  SendGlideWindow.h  SendLossList.cpp  SendLossList.h  UDTMultiplexer.cpp  UDTMultiplexer.h  UDTSocket.cpp  UDTSocket.h  UDTType.h
app/src/main/cpp/udt/packet/: UDTAck2Packet.h  UDTAckPacket.h  UDTBasePacket.h  UDTControlPacket.h  UDTDataPacket.h  UDTKeepAlivePacket.h  UDTMDRPacket.h  UDTNakPacket.h  UDTShutdownPacket.h  UDTSynPacket.h
app/src/main/cpp/util/: AsioTcpClient.cpp  AsioTcpClient.h  AsioTcpServer.cpp  AsioTcpServer.h  AsioUdpClient.cpp  AsioUdpClient.h  AsioUdpServer.cpp  AsioUdpServer.h  BasePacket.h  BaseTasks.h  Handler.cpp  Handler.h  HandlerThread.cpp  HandlerThread.h  HighTask.cpp  HighTask.h  Looper.cpp  Looper.h  LowTask.cpp  LowTask.h  MemoryPool.h  Message.cpp  Message.h  MessageQueue.cpp  MessageQueue.h  MsgPacket.h  MsgTcpServer.cpp  MsgTcpServer.h  Noncopyable.h  Object.h  PacketData.h  PrintTimer.h  PriorityTaskQueue.cpp  PriorityTaskQueue.h  RWLock.h  RWLockGuard.h  Runnable.h  Singleton.h  StreamData.h  StreamPacket.h  (+13 more)
app/src/main/cpp/util/public/: StringUtil.h  define.h  platform.h
app/src/main/java/com/joyware/util/: DeviceUtil.java  TimeUtil.java
app/src/main/java/com/joyware/vmnetsdktest/: HandlerTestActivity.java  JWDefaultScaleFilter.java  MainActivity.java  SmartConfigActivity.java  TestStartActivity.java
app/src/main/java/com/joyware/vmsdk/: Alarm.java  AlarmsHolder.java  CaptureCallback.java  Channel.java  ChannelsHolder.java  DepTree.java  DepTreesHolder.java  DeviceDiscovery.java  DeviceFindCallBack.java  ErrorCode.java  JWDeviceInfo.java  OnUTCTimeStampChangedListener.java  PlayAddressHolder.java  Record.java  RecordDownloader.java  RecordsHolder.java  RtpInfoHolder.java  ScreenshotCallback.java  StreamIdHolder.java  TalkAddressHolder.java  VmNet.java  VmPlayer.java  VmType.java  WifiConfig.java
app/src/main/java/com/jxlianlian/masdk/: Alarm.java  AlarmsHolder.java  (+12 more)
app/src/main/res/layout/: activity_handler_test.xml  activity_main.xml  activity_smart_config.xml  activity_start_test.xml  item_device.xml  main.xml
app/src/main/res/values/: colors.xml  strings.xml
(+155 files in other folders)
